@@ -1,3 +1,8 @@
+2006-12-03  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
+
+	* instance.c: 
+	Postfix for 1605216: removed memory leak.
+
 2006-11-30  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* classProvider.c, classProviderGz.c, classProviderMem.c: 
